# findog

./: .dockerignore  .gitignore  CHANGELOG.md  Client.py  Dockerfile  README.en.md  README.md  anaytics.py  config-example.py  context.py  docker-compose-example.yml  dropbox_client.py  ekartoteka.py  enea.py  entrypoint.sh  gmail_adapter.py  handlers.py  handlers_tmp.py  iprzedszkole.py  mailer.py  main.py  messages.py  nju.py  payment.py  payment_book.py  payment_category.py  payment_list_item.py  payment_sheet.py  pushover.py  pushover_ongoing.py  pyproject.toml  req0101.txt  requirements.txt  settings.py  sumable.py
.github/workflows/: ci.yml  docker.yml  pylint.yml
api_clients/: Client.py  client.py  dropbox_client.py  ekartoteka.py  enea.py  nju_client.py
config/: config-example.yaml
handlers/: analyticshandler.py  context.py  ekartotekahandler.py  eneahandler.py  filehandlers.py  handler.py  iprzedszkolehandler.py  mailinghandler.py  njuhandler.py
templates/: daily.html  welcome.html
tests/: test_handlers_filehandlers.py  test_payment.py  test_payment_book.py  test_payment_category.py  test_payment_sheet.py
