[project]
name = "findog"
version = "0.7.0"
description = "A simple program to keep your payments in check"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "wini83" }
]

dependencies = [
  "dropbox~=12.0.2",
  "openpyxl~=3.1.5",
  "click~=8.1.8",
  "colorama",
  "jinja2~=3.1.6",
  "loguru~=0.7.3",
  "numpy~=2.2.4",
  "beautifulsoup4~=4.13.3",
  "pandas~=2.2.3",
  "matplotlib~=3.10.1",
  "requests~=2.32.3",
  "PyYAML~=6.0.2",
  "pydantic~=2.11.7",
  "pydantic-settings~=2.10.1",
]

[dependency-groups]
dev = [
  "ruff",
  "mypy",
  "commitizen",
  "pytest",
  "pytest-cov",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.0"
tag_format = "v$version"
version_files = ["pyproject.toml"]
update_changelog_on_bump = true

[tool.ruff]
line-length = 88
target-version = "py312"

lint.select = [
  "E", "F",        # podstawowa higiena
  "I",             # import sorting (isort RIP)
  "N",             # naming
  "UP",            # pyupgrade
  "B",             # bugbear
]

exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.coverage.run]
branch = true
omit = [
  "tests/*",
  "data/*",
  "secrets/*",
  "__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
